--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/contracts": "^8.0",
         "illuminate/console": "^8.0",
         "illuminate/filesystem": "^8.0",
-        "illuminate/support": "^8.0",
+        "illuminate/support": "^8.0|^9.0",
         "spatie/laravel-permission": "^3.0"
     },
     "require-dev": {
